Alterado tipo email

--- a/frontend/moving/index.html
+++ b/frontend/moving/index.html
@@ -80,7 +80,7 @@
 
 					<tr>
 						<td><span class="label label-default">Email:</span></td>
-						<td><input type="text" class="form-control" style="min-width:400px;"
+						<td><input type="email" class="form-control" style="min-width:400px;"
 							placeholder="Email" ng-required="true" ng-model="usuario.email" /></td>
 					</tr>
 
