--- a/frontend/moving/alterarSenha.html
+++ b/frontend/moving/alterarSenha.html
@@ -76,7 +76,7 @@
 				<table>
 					<tr>
 						<td><span class="label label-default">Email:</span></td>
-						<td><input type="text" class="form-control" style="min-width:400px;"
+						<td><input type="email" class="form-control" style="min-width:400px;"
 							placeholder="Email" ng-required="true" ng-model="usuario.email" /></td>
 					</tr>
 
